<resources>
    <string name="app_name" translatable="false">ONEPASS</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>

    <!--Main view-->
    <string name="text_email_hint">Email</string>
    <string name="text_invalid_email">Not valid email</string>
    <string name="text_no_account">No account with that email address</string>
    <string name="text_user_removed">The user has been successfully removed</string>
    <string name="text_account_exists">Account already exists</string>
    <string name="button_login">LOG IN</string>
    <string name="button_signup">SIGN UP</string>

    <string name="user_id_pref" translatable="false">com.speechpro.stcdemo.USER_ID</string>
    <string name="email_pref" translatable="false">com.speechpro.stcdemo.EMAIL</string>
    <string name="base_url_pref" translatable="false">com.speechpro.stcdemo.URL</string>

    <string name="url_server_session" translatable="false">https://onepass.tech/vksession/rest/</string>
    <string name="url_server" translatable="false">https://onepass.tech/vkop/rest/</string>

    <!--Credential-->
    <string name="username_pref" translatable="false">com.speechpro.stcdemo.USERNAME</string>
    <string name="username" translatable="false">vk_user</string>
    <string name="password_pref" translatable="false">com.speechpro.stcdemo.PASSWORD</string>
    <string name="password" translatable="false">123</string>
    <string name="domain_id_pref" translatable="false">com.speechpro.stcdemo.DOMAIN_ID</string>
    <string name="domain_id" translatable="false">201</string>

    <!--Modalities-->
    <string name="face_pref" translatable="false">com.speechpro.stcdemo.FACE</string>
    <string name="voice_pref" translatable="false">com.speechpro.stcdemo.VOICE</string>
    <string name="liveness_pref" translatable="false">com.speechpro.stcdemo.LIVENESS</string>

    <!--Settings view-->
    <string name="online_version" translatable="false">Online version with design %s(%d)</string>
    <string name="save">SAVE</string>
    <string name="url_server_hint" translatable="false">URL server</string>
    <string name="url_server_session_hint" translatable="false">URL server session</string>
    <string name="remove_user">Remove user</string>
    <string name="are_you_sure_you_want_to_remove_user">Are you sure you want to remove user %s?</string>
    <string name="remove">Remove</string>
    <string name="cancel">Cancel</string>
    <string name="default_settings">Default</string>
    <string name="restore_settings">Restore default settings?</string>
    <string name="restore">Restore</string>
    <string name="not_valid_url">Not valid URL</string>
    <string name="more">More</string>
    <string name="settings">Settings</string>
    <string name="server_settings">Server settings</string>
    <string name="user">User</string>
    <string name="url_username_password_domain_id" translatable="false">URL, username, password, domain id</string>
    <string name="deleting_user_registration">Deleting user registration from the server</string>
    <string name="version">Application version</string>
    <string name="pref_host" translatable="false">pref_host</string>

    <string-array name="pref_session_credentials">
        <item>admin</item>
        <item>QL0AFWMIX8NRZTKeof9cXsvbvu8=</item>
        <item>201</item>
    </string-array>

    <string name="loading">Loading...</string>
    <string name="general_settings">General settings</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_not_valid_url">Not valid URL</string>
    <string name="error_user_is_blocked">User is blocked.</string>
    <string name="error_user_not_registered">User is not registered.</string>
    <string name="error_incorrect_password">Incorrect password.</string>
    <string name="error_unknown_domain">Unknown domain</string>
    <string name="error_incorrect_url">Incorrect base URL</string>
    <string name="error_server_is_unavailable">Server is unavailable</string>
    <string name="modalities">Modalities</string>
    <string name="modality_must_be_enabled">At least one modality must be enabled.</string>
    <string name="choose">Choose</string>
    <string name="camera_resolution">Camera resolution</string>
    <string name="select_resolution">Select the resolution you are using</string>
    <string name="give_necessary_permissions">To continue, give the necessary permissions</string>
    <string name="go_to_settings">Go to settings to allow necessary permissions</string>
    <string name="debug_mode">Debug mode</string>
    <string name="debug_description">Display of frames, reasons for unsuccessful verification, saving data to the device</string>
    <string name="resolution">Resolution</string>
    <string name="selecting_resolution">Selecting the resolution you are using in the application</string>

</resources>
