<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/general_settings"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_toolbar_size" />

            <include
                layout="@layout/separator"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:elevation="1dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/item"
                android:orientation="vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="12dp"
                    android:text="@string/modalities"
                    android:textColor="@android:color/white"
                    android:textSize="12sp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RelativeLayout
                        android:id="@+id/layout_face"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/face"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingBottom="6dp"
                            android:paddingTop="6dp"
                            android:text="Face"
                            android:textColor="@android:color/white"
                            android:textSize="16sp" />

                        <CheckBox
                            android:id="@+id/face_checkbox"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:theme="@style/CheckBoxStyle" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/layout_voice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/layout_face">

                        <TextView
                            android:id="@+id/voice"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:paddingBottom="6dp"
                            android:paddingTop="6dp"
                            android:text="Voice"
                            android:textColor="@android:color/white"
                            android:textSize="16sp" />

                        <CheckBox
                            android:id="@+id/voice_checkbox"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:theme="@style/CheckBoxStyle" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/layout_liveness"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/layout_voice">

                        <TextView
                            android:id="@+id/liveness"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:paddingBottom="16dp"
                            android:paddingTop="6dp"
                            android:text="Liveness"
                            android:textColor="@android:color/white"
                            android:textSize="16sp" />

                        <CheckBox
                            android:id="@+id/liveness_checkbox"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:theme="@style/CheckBoxStyle" />
                    </RelativeLayout>

                </RelativeLayout>

            </LinearLayout>

            <include layout="@layout/separator" />

            <LinearLayout
                android:id="@+id/server_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/item"
                android:clickable="true"
                android:focusable="true"
                android:orientation="vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="12dp"
                    android:text="@string/server_settings"
                    android:textColor="@color/text_normal"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="16dp"
                    android:text="@string/url_username_password_domain_id"
                    android:textColor="@color/text_secondary"
                    android:textSize="12sp" />

            </LinearLayout>

            <include layout="@layout/separator" />

            <LinearLayout
                android:id="@+id/delete_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/item"
                android:clickable="true"
                android:focusable="true"
                android:orientation="vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="12dp"
                    android:text="@string/user"
                    android:textColor="@color/text_normal"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="12dp"
                    android:text="@string/deleting_user_registration"
                    android:textColor="@color/text_secondary"
                    android:textSize="12sp" />

            </LinearLayout>

            <include layout="@layout/separator" />

            <LinearLayout
                android:id="@+id/resolution"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/item"
                android:clickable="true"
                android:focusable="true"
                android:orientation="vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="12dp"
                    android:text="@string/resolution"
                    android:textColor="@color/text_normal"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="12dp"
                    android:text="@string/selecting_resolution"
                    android:textColor="@color/text_secondary"
                    android:textSize="12sp" />

            </LinearLayout>

            <include layout="@layout/separator" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/item"
                android:clickable="true"
                android:focusable="true"
                android:orientation="vertical"
                android:paddingBottom="12dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="12dp">

                <TextView
                    android:id="@+id/mode_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/debug_mode"
                    android:textColor="@color/text_normal"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/mode_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="32dp"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/mode_title"
                    android:text="@string/debug_description"
                    android:textColor="@color/text_secondary"
                    android:textSize="12sp" />

                <CheckBox
                    android:id="@+id/debug_mode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:theme="@style/CheckBoxStyle" />

            </RelativeLayout>

            <include layout="@layout/separator" />

            <LinearLayout
                android:id="@+id/version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/item"
                android:clickable="true"
                android:focusable="true"
                android:orientation="vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="12dp"
                    android:text="@string/version"
                    android:textColor="@color/text_normal"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="12dp"
                    android:text="Online version with design"
                    android:textColor="@color/text_secondary"
                    android:textSize="12sp" />

            </LinearLayout>

            <include layout="@layout/separator" />

        </LinearLayout>

    </RelativeLayout>

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

</RelativeLayout>
